--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.10.2",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.10.2",
+    "react-leaflet": "^2.6.0",
     "react-leaflet-heatmap-layer": "^2.0.0",
     "react-scripts": "3.2.0",
     "tether": "^1.4.7"
