--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.2",
     "leaflet": "^1.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.10.2",
     "react-leaflet": "^2.6.0",
     "react-leaflet-heatmap-layer": "^2.0.0",
     "react-scripts": "3.2.0",
+    "simpleheat": "^0.4.0",
     "tether": "^1.4.7"
   },
   "scripts": {
